add method show notebook, add docs, add test
